--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,15 @@ License: GPL-2
 Imports:
     dplyr,
     DT,
+    fresh,
     ggplot2,
     ggrepel,
     MSEtool,
     snowfall,
     shiny,
+    shinydashboard,
+    shinydashboardPlus,
+    shiny.i18n,
     shinyjs,
     shinyalert,
     shinyWidgets,
