--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     shinyjs,
     shinyalert,
     shinyWidgets,
-    tidyr
+    tidyr,
+    waiter
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
