--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Authors@R: c(
 Maintainer: Tom Carruthers <tom@bluematterscience.com>
 Description: Slick presents the performance of multiple management objects across multiple states of nature. 
 License: GPL-2
+Depends:
+    R (>= 3.5.0)
 Imports:
     dplyr,
     DiagrammeR,
