--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,12 @@ export(OMs)
 export(PMnorm)
 export(Quilt)
 export(Slick)
+export(Slick2SlickData)
 export(SlickData)
 export(Spider)
 export(Timeseries)
+export(dashboardHeader2)
+export(run_app)
 exportClasses(SlickData)
 exportMethods("Author<-")
 exportMethods("Boxplot<-")
@@ -27,6 +30,7 @@ exportMethods("Kobe<-")
 exportMethods("Label<-")
 exportMethods("MPs<-")
 exportMethods("OMs<-")
+exportMethods("Quilt<-")
 exportMethods("Spider<-")
 exportMethods("Subtitle<-")
 exportMethods("Timeseries<-")
@@ -52,5 +56,12 @@ exportMethods(Subtitle)
 exportMethods(Timeseries)
 exportMethods(Title)
 exportMethods(Value)
-importFrom(utils,install.packages)
-importFrom(utils,installed.packages)
+import(shiny)
+importFrom(golem,activate_js)
+importFrom(golem,add_resource_path)
+importFrom(golem,bundle_resources)
+importFrom(golem,favicon)
+importFrom(golem,with_golem_options)
+importFrom(shiny,NS)
+importFrom(shiny,shinyApp)
+importFrom(shiny,tagList)
