--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(Slick2SlickData)
 export(SlickData)
 export(Spider)
 export(Timeseries)
+export(Title)
 export(dashboardHeader2)
 export(run_app)
 exportClasses(SlickData)
@@ -28,6 +29,7 @@ exportMethods("Institution<-")
 exportMethods("Introduction<-")
 exportMethods("Kobe<-")
 exportMethods("Label<-")
+exportMethods("Link<-")
 exportMethods("MPs<-")
 exportMethods("OMs<-")
 exportMethods("Quilt<-")
@@ -48,6 +50,7 @@ exportMethods(Institution)
 exportMethods(Introduction)
 exportMethods(Kobe)
 exportMethods(Label)
+exportMethods(Link)
 exportMethods(MPs)
 exportMethods(OMs)
 exportMethods(Quilt)
