--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,11 +57,18 @@ Collate:
     'create_translation_file.R'
     'fct_dashboardHeader2.R'
     'fct_translator.R'
+    'fct_wrapper_dropdownbutton.R'
     'misc.R'
     'mod_About.R'
     'mod_Filters.R'
     'mod_Home.R'
+    'mod_MP_Info.R'
     'mod_Metadata.R'
+    'mod_OM_Info.R'
+    'mod_PM_Info.R'
+    'mod_Quilt.R'
     'mod_Resources.R'
     'mod_Sidebar.R'
+    'mod_Spider.R'
     'slick2SlickData.R'
+Roxygen: list(markdown = TRUE)
