--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(run_app)
 exportClasses(SlickData)
 exportMethods("Author<-")
 exportMethods("Boxplot<-")
+exportMethods("Color<-")
 exportMethods("Date<-")
 exportMethods("Default<-")
 exportMethods("Description<-")
@@ -40,6 +41,7 @@ exportMethods("Title<-")
 exportMethods("Value<-")
 exportMethods(Author)
 exportMethods(Boxplot)
+exportMethods(Color)
 exportMethods(Date)
 exportMethods(Default)
 exportMethods(Description)
@@ -60,6 +62,7 @@ exportMethods(Timeseries)
 exportMethods(Title)
 exportMethods(Value)
 import(shiny)
+importFrom(dplyr,"%>%")
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
