--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,7 +66,9 @@ Collate:
     'misc.R'
     'mod_About.R'
     'mod_Filter.R'
+    'mod_Filter_MP.R'
     'mod_Filter_OM.R'
+    'mod_Filter_PM.R'
     'mod_Filters.R'
     'mod_Home.R'
     'mod_MP_Info.R'
