about to make dramatic changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,7 +76,10 @@ Collate:
     'mod_OM_Info.R'
     'mod_PM_Info.R'
     'mod_Quilt.R'
+    'mod_Quilt_plot.R'
     'mod_Resources.R'
     'mod_Sidebar.R'
     'mod_Spider.R'
+    'mod_TradeOff_plot.R'
+    'mod_toplink.R'
     'slick2SlickData.R'
