--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ exportMethods("Kobe<-")
 exportMethods("Label<-")
 exportMethods("Link<-")
 exportMethods("MPs<-")
+exportMethods("Max<-")
+exportMethods("Min<-")
 exportMethods("OMs<-")
 exportMethods("Quilt<-")
 exportMethods("Spider<-")
@@ -54,6 +56,8 @@ exportMethods(Kobe)
 exportMethods(Label)
 exportMethods(Link)
 exportMethods(MPs)
+exportMethods(Max)
+exportMethods(Min)
 exportMethods(OMs)
 exportMethods(Quilt)
 exportMethods(Spider)
