--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ exportMethods("Label<-")
 exportMethods("Link<-")
 exportMethods("MPs<-")
 exportMethods("Max<-")
+exportMethods("Metadata<-")
 exportMethods("Min<-")
 exportMethods("OMs<-")
 exportMethods("Quilt<-")
@@ -57,6 +58,7 @@ exportMethods(Label)
 exportMethods(Link)
 exportMethods(MPs)
 exportMethods(Max)
+exportMethods(Metadata)
 exportMethods(Min)
 exportMethods(OMs)
 exportMethods(Quilt)
