--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,39 +2,35 @@
 
 export(Boxplot)
 export(Kobe)
-export(MPs)
 export(Make_Slick)
 export(NewSlick)
 export(OMs)
 export(PMnorm)
 export(Quilt)
 export(Slick)
-export(Slick2SlickData)
-export(SlickData)
 export(Spider)
 export(Timeseries)
-export(Title)
+export(Update)
 export(dashboardHeader2)
 export(run_app)
-exportClasses(SlickData)
+exportClasses(Slick)
 exportMethods("Author<-")
 exportMethods("Boxplot<-")
-exportMethods("Color<-")
 exportMethods("Date<-")
 exportMethods("Default<-")
 exportMethods("Description<-")
 exportMethods("Design<-")
 exportMethods("Email<-")
-exportMethods("Fishery<-")
 exportMethods("Institution<-")
 exportMethods("Introduction<-")
 exportMethods("Kobe<-")
 exportMethods("Label<-")
-exportMethods("Link<-")
 exportMethods("MPs<-")
 exportMethods("Max<-")
+exportMethods("MaxColor<-")
 exportMethods("Metadata<-")
 exportMethods("Min<-")
+exportMethods("MinColor<-")
 exportMethods("OMs<-")
 exportMethods("Quilt<-")
 exportMethods("Spider<-")
@@ -44,22 +40,21 @@ exportMethods("Title<-")
 exportMethods("Value<-")
 exportMethods(Author)
 exportMethods(Boxplot)
-exportMethods(Color)
 exportMethods(Date)
 exportMethods(Default)
 exportMethods(Description)
 exportMethods(Design)
 exportMethods(Email)
-exportMethods(Fishery)
 exportMethods(Institution)
 exportMethods(Introduction)
 exportMethods(Kobe)
 exportMethods(Label)
-exportMethods(Link)
 exportMethods(MPs)
 exportMethods(Max)
+exportMethods(MaxColor)
 exportMethods(Metadata)
 exportMethods(Min)
+exportMethods(MinColor)
 exportMethods(OMs)
 exportMethods(Quilt)
 exportMethods(Spider)
@@ -67,6 +62,7 @@ exportMethods(Subtitle)
 exportMethods(Timeseries)
 exportMethods(Title)
 exportMethods(Value)
+exportMethods(show)
 import(shiny)
 importFrom(dplyr,"%>%")
 importFrom(golem,activate_js)
