--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,16 +52,16 @@ Collate:
     'class_Kobe.R'
     'class_Boxplot.R'
     'class_Quilt.R'
-    'class_MPs.R'
     'class_OMs.R'
-    'class_SlickData.R'
+    'class_Slick.R'
     'aa_generics.R'
     'app_config.R'
     'app_server.R'
     'app_ui.R'
     'create_translation_file.R'
+    'example_objects.R'
+    'fct_Update.R'
     'fct_dashboardHeader2.R'
-    'fct_slick2SlickData.R'
     'fct_translator.R'
     'fct_wrapper_dropdownbutton.R'
     'misc.R'
