--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Collate:
     'class_Boxplot.R'
     'class_Quilt.R'
     'class_OMs.R'
+    'class_MPs.R'
     'class_Slick.R'
     'aa_generics.R'
     'app_config.R'
@@ -60,8 +61,10 @@ Collate:
     'app_ui.R'
     'create_translation_file.R'
     'example_objects.R'
+    'fct_Check.R'
     'fct_Update.R'
     'fct_dashboardHeader2.R'
+    'fct_plots.R'
     'fct_translator.R'
     'fct_wrapper_dropdownbutton.R'
     'misc.R'
@@ -83,3 +86,4 @@ Collate:
     'mod_Spider.R'
     'mod_TradeOff_plot.R'
     'mod_toplink.R'
+    'utils_Table.R'
