--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(App)
 export(Boxplot)
+export(Check)
 export(Kobe)
 export(Make_Slick)
 export(NewSlick)
@@ -18,7 +19,6 @@ exportClasses(Slick)
 exportMethods("Author<-")
 exportMethods("Boxplot<-")
 exportMethods("Date<-")
-exportMethods("Default<-")
 exportMethods("Description<-")
 exportMethods("Design<-")
 exportMethods("Email<-")
@@ -33,6 +33,7 @@ exportMethods("Metadata<-")
 exportMethods("Min<-")
 exportMethods("MinColor<-")
 exportMethods("OMs<-")
+exportMethods("Preset<-")
 exportMethods("Quilt<-")
 exportMethods("Spider<-")
 exportMethods("Subtitle<-")
@@ -42,7 +43,6 @@ exportMethods("Value<-")
 exportMethods(Author)
 exportMethods(Boxplot)
 exportMethods(Date)
-exportMethods(Default)
 exportMethods(Description)
 exportMethods(Design)
 exportMethods(Email)
@@ -57,12 +57,15 @@ exportMethods(Metadata)
 exportMethods(Min)
 exportMethods(MinColor)
 exportMethods(OMs)
+exportMethods(Preset)
 exportMethods(Quilt)
 exportMethods(Spider)
 exportMethods(Subtitle)
+exportMethods(Table)
 exportMethods(Timeseries)
 exportMethods(Title)
 exportMethods(Value)
+exportMethods(plot)
 exportMethods(show)
 import(shiny)
 importFrom(dplyr,"%>%")
