updates [skip ci]

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -70,9 +70,7 @@ Collate:
     'misc.R'
     'mod_About.R'
     'mod_Filter.R'
-    'mod_Filter_MP.R'
-    'mod_Filter_OM.R'
-    'mod_Filter_PM.R'
+    'mod_Filter_select.R'
     'mod_Filters.R'
     'mod_Home.R'
     'mod_MP_Info.R'
