--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ exportMethods("Spider<-")
 exportMethods("Subtitle<-")
 exportMethods("Timeseries<-")
 exportMethods("Title<-")
+exportMethods("Tradeoff<-")
 exportMethods("Value<-")
 exportMethods(Author)
 exportMethods(Boxplot)
@@ -64,6 +65,7 @@ exportMethods(Subtitle)
 exportMethods(Table)
 exportMethods(Timeseries)
 exportMethods(Title)
+exportMethods(Tradeoff)
 exportMethods(Value)
 exportMethods(plot)
 exportMethods(show)
