updates fro Report

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -82,6 +82,8 @@ Collate:
     'mod_PM_Info.R'
     'mod_Quilt.R'
     'mod_Quilt_plot.R'
+    'mod_Report_Add.R'
+    'mod_Report_Add_Button.R'
     'mod_Resources.R'
     'mod_Sidebar.R'
     'mod_Spider.R'
