--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(Quilt)
 export(Slick)
 export(Spider)
 export(Timeseries)
+export(Tradeoff)
 export(Update)
 export(dashboardHeader2)
 export(run_app)
@@ -41,6 +42,8 @@ exportMethods("Timeseries<-")
 exportMethods("Title<-")
 exportMethods("Tradeoff<-")
 exportMethods("Value<-")
+exportMethods("X<-")
+exportMethods("Y<-")
 exportMethods(Author)
 exportMethods(Boxplot)
 exportMethods(Date)
@@ -67,6 +70,8 @@ exportMethods(Timeseries)
 exportMethods(Title)
 exportMethods(Tradeoff)
 exportMethods(Value)
+exportMethods(X)
+exportMethods(Y)
 exportMethods(plot)
 exportMethods(show)
 import(shiny)
