--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,6 +69,7 @@ Collate:
     'create_translation_file.R'
     'example_objects.R'
     'fct_Check.R'
+    'fct_Kobe_plot.R'
     'fct_Update.R'
     'fct_dashboardHeader2.R'
     'fct_plots.R'
@@ -79,7 +80,6 @@ Collate:
     'mod_Boxplot.R'
     'mod_Boxplot_OM.R'
     'mod_Boxplot_overall.R'
-    'mod_Boxplot_plot.R'
     'mod_Filter.R'
     'mod_Filter_select.R'
     'mod_Home.R'
