--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ exportMethods("Preset<-")
 exportMethods("Quilt<-")
 exportMethods("Spider<-")
 exportMethods("Subtitle<-")
+exportMethods("Time<-")
+exportMethods("TimeLab<-")
 exportMethods("Timeseries<-")
 exportMethods("Title<-")
 exportMethods("Tradeoff<-")
@@ -66,6 +68,8 @@ exportMethods(Quilt)
 exportMethods(Spider)
 exportMethods(Subtitle)
 exportMethods(Table)
+exportMethods(Time)
+exportMethods(TimeLab)
 exportMethods(Timeseries)
 exportMethods(Title)
 exportMethods(Tradeoff)
@@ -75,7 +79,6 @@ exportMethods(Y)
 exportMethods(plot)
 exportMethods(show)
 import(shiny)
-importFrom(dplyr,"%>%")
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
