--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,63 +19,49 @@ export(run_app)
 exportClasses(Slick)
 exportMethods("Author<-")
 exportMethods("Boxplot<-")
+exportMethods("Colors<-")
 exportMethods("Date<-")
-exportMethods("Description<-")
 exportMethods("Design<-")
 exportMethods("Email<-")
 exportMethods("Institution<-")
 exportMethods("Introduction<-")
 exportMethods("Kobe<-")
-exportMethods("Label<-")
 exportMethods("MPs<-")
-exportMethods("Max<-")
-exportMethods("MaxColor<-")
 exportMethods("Metadata<-")
-exportMethods("Min<-")
-exportMethods("MinColor<-")
 exportMethods("OMs<-")
 exportMethods("Preset<-")
 exportMethods("Quilt<-")
+exportMethods("Selected<-")
 exportMethods("Spider<-")
 exportMethods("Subtitle<-")
 exportMethods("Time<-")
-exportMethods("TimeLab<-")
 exportMethods("Timeseries<-")
 exportMethods("Title<-")
 exportMethods("Tradeoff<-")
 exportMethods("Value<-")
-exportMethods("X<-")
-exportMethods("Y<-")
 exportMethods(Author)
 exportMethods(Boxplot)
+exportMethods(Colors)
 exportMethods(Date)
-exportMethods(Description)
 exportMethods(Design)
 exportMethods(Email)
 exportMethods(Institution)
 exportMethods(Introduction)
 exportMethods(Kobe)
-exportMethods(Label)
 exportMethods(MPs)
-exportMethods(Max)
-exportMethods(MaxColor)
 exportMethods(Metadata)
-exportMethods(Min)
-exportMethods(MinColor)
 exportMethods(OMs)
 exportMethods(Preset)
 exportMethods(Quilt)
+exportMethods(Selected)
 exportMethods(Spider)
 exportMethods(Subtitle)
 exportMethods(Table)
 exportMethods(Time)
-exportMethods(TimeLab)
 exportMethods(Timeseries)
 exportMethods(Title)
 exportMethods(Tradeoff)
 exportMethods(Value)
-exportMethods(X)
-exportMethods(Y)
 exportMethods(plot)
 exportMethods(show)
 import(shiny)
