--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,6 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Collate: 
-    'Check_Slick.R'
     'Make_Slick.R'
     'RunSlick.R'
     'Slick_object.R'
@@ -66,15 +65,15 @@ Collate:
     'app_config.R'
     'app_server.R'
     'app_ui.R'
-    'create_translation_file.R'
-    'example_objects.R'
     'fct_Check.R'
+    'fct_FilterSlick.R'
     'fct_Kobe_plot.R'
     'fct_Update.R'
+    'fct_colors.R'
     'fct_dashboardHeader2.R'
+    'fct_filters.R'
     'fct_plots.R'
     'fct_translator.R'
-    'fct_wrapper_dropdownbutton.R'
     'misc.R'
     'mod_About.R'
     'mod_Boxplot.R'
@@ -82,14 +81,17 @@ Collate:
     'mod_Boxplot_overall.R'
     'mod_Filter.R'
     'mod_Filter_select.R'
+    'mod_Global_Filters.R'
     'mod_Home.R'
     'mod_Kobe.R'
     'mod_Kobe_overall.R'
     'mod_Kobe_time.R'
+    'mod_MP_Color.R'
     'mod_MP_Info.R'
     'mod_Metadata.R'
     'mod_OM_Info.R'
     'mod_PM_Info.R'
+    'mod_Page_Filter.R'
     'mod_Quilt.R'
     'mod_Quilt_plot.R'
     'mod_Report_Add.R'
@@ -108,6 +110,8 @@ Collate:
     'mod_Timeseries_overall.R'
     'mod_TradeOff_plot.R'
     'mod_Tradeoff.R'
+    'mod_filter_selection.R'
+    'mod_filter_selection_OM.R'
     'mod_subtitle.R'
     'mod_toplink.R'
     'utils_Table.R'
