updates [skip ci]

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,12 +11,6 @@ navbar:
     articles:
       text: Articles
       menu:
-      - text: The Slick Object
-      - text: A Simple Example
-        href: articles/slick1.html
-      - text: Multi-Language
-        href: articles/slick2.html
-      - text: -------
-      - text: "Category B"
-      - text: Article B1
-        href: articles/b1.html
+      - text: Developer's Guide
+      - text: Building a Slick Object
+        href: articles/Building-A-Slick-Object.html
