lots of new developments
updating all documentation - breaking changes to App!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Collate: 
     'RunSlick.R'
+    'Slick_functions.R'
     'Slick_tools.R'
     'a_classunions.R'
     'a_imports.R'
@@ -57,24 +58,29 @@ Collate:
     'class_Tradeoff.R'
     'class_Spider.R'
     'class_Kobe.R'
-    'class_Boxplot.R'
     'class_Quilt.R'
     'class_OMs.R'
     'class_MPs.R'
+    'class_Boxplot.R'
     'class_Slick.R'
     'aa_generics.R'
     'app_config.R'
     'app_server.R'
     'app_ui.R'
     'fct_Check.R'
+    'fct_Code.R'
+    'fct_Colors.R'
+    'fct_Description.R'
+    'fct_Design.R'
     'fct_FilterSlick.R'
     'fct_Kobe_plot.R'
+    'fct_Label.R'
+    'fct_Metadata.R'
     'fct_Update.R'
-    'fct_colors.R'
     'fct_dashboardHeader2.R'
-    'fct_filters.R'
     'fct_plots.R'
     'fct_translator.R'
+    'man_functions.R'
     'misc.R'
     'mod_About.R'
     'mod_Boxplot.R'
