--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,9 +52,11 @@ export(Kobe)
 export(Label)
 export(Limit)
 export(MPs)
+export(Make_Slick)
 export(MaxValue)
 export(Metadata)
 export(MinValue)
+export(NewSlick)
 export(OMs)
 export(PMnorm)
 export(Preset)
