--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export("Author<-")
 export("Boxplot<-")
 export("Code<-")
 export("Color<-")
-export("Colors<-")
 export("Date<-")
 export("Defaults<-")
 export("Description<-")
@@ -39,7 +38,6 @@ export(Boxplot)
 export(Check)
 export(Code)
 export(Color)
-export(Colors)
 export(Date)
 export(Defaults)
 export(Description)
@@ -73,8 +71,8 @@ export(Title)
 export(Tradeoff)
 export(Update)
 export(Value)
+export(plotBoxplot)
 export(plotTimeseries)
-export(run_app)
 exportClasses(Boxplot)
 exportClasses(Kobe)
 exportClasses(MPs)
@@ -86,7 +84,6 @@ exportClasses(Timeseries)
 exportClasses(Tradeoff)
 exportMethods("Preset<-")
 exportMethods(Metadata)
-exportMethods(plot)
 exportMethods(show)
 import(shiny)
 importFrom(golem,activate_js)
