--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,5 +12,72 @@ navbar:
       text: Articles
       menu:
       - text: Developer's Guide
-      - text: Building a Slick Object
-        href: articles/Building-A-Slick-Object.html
+        href: articles/DevelopersGuide.html
+
+
+reference:
+- title: "Create a Slick object"
+  desc: >
+    Create and populate a Slick object
+  contents:
+  - Slick-class
+  - SlickFunctions
+  - Check
+  - MPs
+  - OMs
+  - Boxplot
+  - Kobe
+  - Quilt
+  - Spider
+  - Timeseries
+  - Tradeoff
+  - Update
+- title: "Access and Assign Functions"
+  desc: >
+    Functions to access and assign
+  contents:
+  - Code
+  - Color
+  - Defaults
+  - Design
+  - Factors
+  - Preset
+  - Metadata
+  - MinValue
+  - Limit
+  - Time
+  - TimeLab
+  - TimeNow
+  - Value
+- title: "S4 Object Classes"
+  desc: >
+    The S4 classes used to create `Slick` objects
+  contents:
+  - Slick-class
+  - MPs-class
+  - OMs-class
+  - Boxplot-class
+  - Kobe-class
+  - Quilt-class
+  - Spider-class
+  - Tradeoff-class
+  - Timeseries-class
+- title: 'Run the Slick Shiny App'
+  contents:
+  - App
+- title: 'Plot and Other Functions'
+  desc: >
+    Plotting routines and other functions
+  contents:
+  - plotBoxplot
+  - plotTimeseries
+- title: 'Deprecated'
+  desc: >
+    Functions still work for backwards compatability, but no longer recommended
+  contents:
+  - Make_Slick
+  - NewSlick
+  - PMnorm
+
+
+
