--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(Update)
 export(Value)
 export(plotBoxplot)
 export(plotTimeseries)
+export(show)
 exportClasses(Boxplot)
 exportClasses(Kobe)
 exportClasses(MPs)
@@ -91,6 +92,8 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(grDevices,colors)
+importFrom(grDevices,rgb)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,points)
