--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(Title)
 export(Tradeoff)
 export(Update)
 export(Value)
+export(get_casestudies)
 export(plotBoxplot)
 export(plotTimeseries)
 export(show)
