--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(Update)
 export(Value)
 export(get_casestudies)
 export(plotBoxplot)
+export(plotBoxplotGrid)
 export(plotTimeseries)
 export(show)
 exportClasses(Boxplot)
