--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(Title)
 export(Tradeoff)
 export(Update)
 export(Value)
+export(default_mp_colors)
 export(get_casestudies)
 export(plotBoxplot)
 export(plotBoxplotGrid)
