--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,24 +20,25 @@ Imports:
     DT,
     ggplot2,
     ggrepel,
+    golem,
     graphics,
     grDevices,
     methods,
     scales,
+    shiny,
     stats,
     tibble,
     utils
 Suggests: 
+    bookdown,
     colourpicker,
     colorspace,
     esquisse,
     flextable,
     fresh,
-    golem,
     httr,
     knitr,
     MSEtool,
-    shiny,
     shiny.i18n,
     shinyalert,
     shinyBS,
