--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(Description)
 export(Design)
 export(Email)
 export(Factors)
+export(FilterSlick)
 export(Institution)
 export(Introduction)
 export(Kobe)
@@ -74,7 +75,6 @@ export(Value)
 export(default_mp_colors)
 export(get_casestudies)
 export(plotBoxplot)
-export(plotBoxplotGrid)
 export(plotTimeseries)
 export(show)
 exportClasses(Boxplot)
