--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,8 @@ export(Value)
 export(default_mp_colors)
 export(get_casestudies)
 export(plotBoxplot)
+export(plotKobe)
+export(plotQuilt)
 export(plotTimeseries)
 export(show)
 exportClasses(Boxplot)
