update Spider plot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(get_casestudies)
 export(plotBoxplot)
 export(plotKobe)
 export(plotQuilt)
+export(plotSpider)
 export(plotTimeseries)
 export(show)
 exportClasses(Boxplot)
