--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(plotKobe)
 export(plotQuilt)
 export(plotSpider)
 export(plotTimeseries)
+export(plotTradeoff)
 export(show)
 exportClasses(Boxplot)
 exportClasses(Kobe)
