fixes for CRAN checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: Slick
 Title: Interactive Visualization of MSE Results
-Version: 1.0.9011
+Version: 0.1.0
 Authors@R: c(
     person("Adrian", "Hordyk", , "adrian@bluematterscience.com", role = c("aut", "cre")),
     person("Tom", "Carruthers", , "tom@bluematterscience.com", role = 'aut'),
@@ -24,7 +24,6 @@ Imports:
     graphics,
     grDevices,
     methods,
-    patchwork,
     scales,
     shiny,
     stats,
@@ -41,7 +40,9 @@ Suggests:
     httr,
     kableExtra,
     knitr,
+    MSEtool,
     openMSE,
+    RColorBrewer,
     shiny.i18n,
     shinyalert,
     shinyBS,
