--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(Tradeoff)
 export(Update)
 export(Value)
 export(default_mp_colors)
+export(download_casestudy)
 export(get_casestudies)
 export(plotBoxplot)
 export(plotKobe)
@@ -92,7 +93,6 @@ exportClasses(Timeseries)
 exportClasses(Tradeoff)
 exportMethods("Preset<-")
 exportMethods(Metadata)
-exportMethods(show)
 import(shiny)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
