--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://blue-matter.github.io/Slick/
+url: https://slick.bluematterscience.com/
 template:
   bootstrap: 5
   bootswatch: litera
