--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -4,9 +4,8 @@ on:
   push:
     branches: [main, master]
   pull_request:
-    branches: [main, master]
 
-name: R-CMD-check
+name: R-CMD-check.yaml
 
 permissions: read-all
 
@@ -45,7 +44,6 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
-          upgrade: "TRUE"
 
       - uses: r-lib/actions/check-r-package@v2
         with:
