--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: Slick
 Title: Interactive Visualization of MSE Results
-Version: 0.1.3
+Version: 1.0.0
 Authors@R: c(
     person("Adrian", "Hordyk", , "adrian@bluematterscience.com", role = c("aut", "cre")),
     person("Tom", "Carruthers", , "tom@bluematterscience.com", role = 'aut'),
@@ -9,8 +9,8 @@ Authors@R: c(
     person("Shana", "Miller", , "smiller@oceanfdn.org", role = 'aut')
   )
 Maintainer: Adrian Hordyk <adrian@bluematterscience.com>
-Description: Slick presents the performance of multiple management objects
-    across multiple states of nature.
+Description: 'Slick' is an R package designed for visualizing and exploring results of a Management Strategy Evaluation (MSE).
+URL: https://slick.bluematterscience.com/
 License: GPL-2
 Depends:
     R (>= 4.1.0)
@@ -59,7 +59,6 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://slick.bluematterscience.com/
 Collate: 
     'RunSlick.R'
     'Slick_tools.R'
