--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export("MinValue<-")
 export("OMs<-")
 export("Preset<-")
 export("Quilt<-")
+export("RefPoints<-")
 export("Spider<-")
 export("Subtitle<-")
 export("Target<-")
@@ -60,6 +61,7 @@ export(OMs)
 export(PMnorm)
 export(Preset)
 export(Quilt)
+export(RefPoints)
 export(Slick)
 export(Spider)
 export(Subtitle)
