add option to select different terminal year for Kobe
fixes #26

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export("Target<-")
 export("Time<-")
 export("TimeLab<-")
 export("TimeNow<-")
+export("TimeTerminal<-")
 export("Timeseries<-")
 export("Title<-")
 export("Tradeoff<-")
@@ -69,6 +70,7 @@ export(Target)
 export(Time)
 export(TimeLab)
 export(TimeNow)
+export(TimeTerminal)
 export(Timeseries)
 export(Title)
 export(Tradeoff)
