--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
   )
 Maintainer: Adrian Hordyk <adrian@bluematterscience.com>
 Description: 'Slick' is an R package designed for visualizing and exploring results of a Management Strategy Evaluation (MSE).
-URL: https://slick.bluematterscience.com/
+URL: https://slick.bluematterscience.com/, https://github.com/Blue-Matter/Slick
 License: GPL-2
 Depends:
     R (>= 4.1.0)
@@ -133,3 +133,4 @@ Collate:
     'mod_toplink.R'
     'utils_Table.R'
     'utils_util.R'
+BugReports: https://github.com/Blue-Matter/Slick/issues
