updates for patch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export("MPs<-")
 export("MaxValue<-")
 export("Metadata<-")
 export("MinValue<-")
+export("Misc<-")
 export("OMs<-")
 export("Preset<-")
 export("Quilt<-")
@@ -57,6 +58,7 @@ export(Make_Slick)
 export(MaxValue)
 export(Metadata)
 export(MinValue)
+export(Misc)
 export(NewSlick)
 export(OMs)
 export(PMnorm)
